fix copy and csv spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,7 @@ button.hide-button {
 	position: relative;
 	width: 100%;
 	text-align: center;
+	text-decoration: none;
 	-webkit-appearance: none;
 	outline: none;
 	box-sizing: content-box;
@@ -181,6 +182,7 @@ button.hide-button:hover {
 	color: #eee;
 	cursor: pointer;
 	background-color: rgba(255,255,255,0.1);
+	text-decoration: none;
 	-webkit-transition: all 0.10s ease-in-out;
 	-moz-transition: all 0.10s ease-in-out;
 	-ms-transition: all 0.10s ease-in-out;
@@ -196,6 +198,7 @@ button.hide-button:active {
 	background-color: rgba(255,255,255,0.2);
 	position: relative;
 	top: 1px;
+	text-decoration: none;
 }
 button.clear,
 button.copy-button,
